# ffkitty

./: README.md  pyproject.toml  run.sh  update.sh
ffkitty/: __init__.py  __main__.py  app.py  edit_ops.py  ffmpeg_ops.py  kitty_image.py
tests/: test_edit_ops.py
