[project]
name = "ffkitty"
version = "0.1.0"
description = "Terminal GUI for ffmpeg, optimized for Kitty"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0.0",
    "textual-image>=0.13.0",
]

[project.scripts]
ffkitty = "ffkitty.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ffkitty"]
